improved base dialog and added some locale

--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -1,7 +1,9 @@
 {
   "buttons": {
+    "close_button": "Close",
     "cancel_button": "Cancel",
     "next_button": "Next"
   },
+  "step1": "Step 1. Read",
   "edit_verse": "Edit Verse - ${passage}"
 }
