added editor controls and hooked up stepper

--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -1,5 +1,7 @@
 {
   "buttons": {
+    "save_button": "Save",
+    "back_button": "Back",
     "close_button": "Close",
     "cancel_button": "Cancel",
     "next_button": "Next"
