Working on localization

--- a/locale/English-en_US.json
+++ b/locale/English-en_US.json
@@ -2,5 +2,10 @@
   "step1_read": "Step 1. Read",
   "show_exp_resource": "Click to show expanded resource panes",
   "click_add_resource": "Click to add a resource",
-  "add_resource": "Add Resources"
+  "add_resource": "Add Resources",
+  "select_language": "Select language",
+  "select": "Select",
+  "close": "Close",
+  "load": "Load",
+  "click_remove_resource": "Click to remove resource"
 }
