--- a/locale/Hindi-hi_IN.json
+++ b/locale/Hindi-hi_IN.json
@@ -2,5 +2,10 @@
   "step1_read": "चरण 1. पढ़ें",
   "show_exp_resource": "विस्तृत संसाधन पैन दिखाने के लिए क्लिक करें",
   "click_add_resource": "एक संसाधन जोड़ने के लिए क्लिक करें",
-  "add_resource": "संसाधन जोड़ें"
+  "add_resource": "संसाधन जोड़ें",
+  "select_language": "भाषा चुनिए",
+  "select": "चुनते हैं",
+  "close": "बंद करे",
+  "load": "भार",
+  "click_remove_resource": "संसाधन को हटाने के लिए क्लिक करें"
 }
