--- a/src/locale/English-en_US.json
+++ b/src/locale/English-en_US.json
@@ -7,7 +7,9 @@
     "next_button": "Next",
     "load_button": "Load"
   },
-  "edit_verse": "Edit Verse - ${passage}",
+  "edit_verse_title": "Edit Verse - ${passage}",
+  "edit_verse": "Edit Verse",
+  "select_reasons": "Select reason(s) for change",
   "editor": {
     "spelling": "Spelling",
     "punctuation": "Punctuation",
